It finally Built but does it work.

--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -71,8 +71,7 @@
 
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="323ba6c1312bc04c1e24101866d439a399b8d3aa"
-            />
+            android:value="845fb30ce028a39949d190fa6d797ebec078b8d1" />
 
     </application>
 
