--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -39,7 +39,7 @@ android {
 
     defaultConfig {
         applicationId "com.uele.reidx.android"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
         versionName "1.0.0"
@@ -84,6 +84,16 @@ android {
         }
     }
 
+    signingConfigs {
+        //Uncomment and set values and then this will work
+        //release {
+              //storeFile file(System.getenv('ANDROID_KEYSTORE_PATH'))
+              //storePassword System.getenv('ANDROID_STORE_PASS')
+              //keyAlias System.getenv('ANDROID_KEY_ALIAS')
+              //keyPassword System.getenv('ANDROID_KEY_PASS')
+            // }
+    }
+
     testOptions {
         unitTests.returnDefaultValues = true
     }
@@ -101,7 +111,6 @@ dependencies {
     compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
     compile "com.android.support:cardview-v7:$rootProject.supportLibraryVersion"
     compile "com.android.support:design:$rootProject.supportLibraryVersion"
-    compile 'com.android.support:multidex:1.0.1'
     compile "com.android.support:preference-v14:$rootProject.supportLibraryVersion"
     compile "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
     compile "com.android.support:support-annotations:$rootProject.supportLibraryVersion"
@@ -133,8 +142,8 @@ dependencies {
     compile "com.google.code.gson:gson:$rootProject.gsonVersion"
 
     // Events
-    compile 'de.greenrobot:eventbus:2.4.0'
-    compile 'com.squareup:otto:1.3.5'
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.squareup:otto:1.3.8'
 
     // debug database
     debugCompile "com.amitshekhar.android:debug-db:$rootProject.debugDBVersion"
@@ -144,7 +153,6 @@ dependencies {
 
     // network
     compile "com.amitshekhar.android:rx2-android-networking:$rootProject.rx2AndroidNetworking"
-    compile "com.google.code.gson:gson:$rootProject.gsonVersion"
 
     // logger
     compile "com.jakewharton.timber:timber:$rootProject.timberVersion"
@@ -154,9 +162,8 @@ dependencies {
     compile "io.reactivex.rxjava2:rxandroid:$rootProject.rxandroidVersion"
 
     compile 'com.jakewharton.byteunits:byteunits:0.9.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'net.danlew:android.joda:2.7.1'
+    compile 'net.danlew:android.joda:2.9.9'
 
     // dependencies for local unit tests
     testCompile "junit:junit:$rootProject.ext.junitVersion"
@@ -172,7 +179,7 @@ dependencies {
     androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:$rootProject.dagger2Version"
 
     wearApp project(':wear')
-    compile 'com.google.android.gms:play-services-wearable:11.0.0'
+    compile 'com.google.android.gms:play-services-wearable:11.0.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
 }
