--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -70,13 +70,11 @@ android {
     }
 
     productFlavors {
-
         leads {
             applicationId 'com.uele.reidx.android.leads'
             versionCode 1
             versionName '1.0.0'
         }
-
         investors {
             applicationId 'com.uele.reidx.android.investors'
             versionCode 1
@@ -85,13 +83,12 @@ android {
     }
 
     signingConfigs {
-        //Uncomment and set values and then this will work
-        //release {
-              //storeFile file(System.getenv('ANDROID_KEYSTORE_PATH'))
-              //storePassword System.getenv('ANDROID_STORE_PASS')
-              //keyAlias System.getenv('ANDROID_KEY_ALIAS')
-              //keyPassword System.getenv('ANDROID_KEY_PASS')
-            // }
+        release {
+            keyAlias 'reidx'
+            keyPassword 'mko09ijn'
+            storeFile file('/Users/briandonaldson/Desktop/Test.jks')
+            storePassword 'mko09ijn'
+        }
     }
 
     testOptions {
@@ -104,8 +101,7 @@ configurations.all {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     // android support libraries
     compile "com.android.support:animated-vector-drawable:$rootProject.supportLibraryVersion"
     compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
@@ -125,7 +121,6 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true;
     }
-
     // database
     compile "org.greenrobot:greendao:$rootProject.greenDaoVersion"
 
@@ -160,7 +155,6 @@ dependencies {
     // reactive
     compile "io.reactivex.rxjava2:rxjava:$rootProject.rxjava2Version"
     compile "io.reactivex.rxjava2:rxandroid:$rootProject.rxandroidVersion"
-
     compile 'com.jakewharton.byteunits:byteunits:0.9.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'net.danlew:android.joda:2.9.9'
