Trying to update build

--- a/build.gradle
+++ b/build.gradle
@@ -45,9 +45,11 @@ ext {
     dagger2Version = '2.8'
     debugDBVersion = '1.0.0'
     dexMakerVersion = '1.2'
+    fireBaseVersion = '11.0.1'
     glideVersion = '3.7.0'
     greenDaoVersion = '3.2.2'
     ormLiteVersion = '5.0'
+    retroFitVersion = '2.1.0'
     rxandroidVersion = '2.0.1'
     rxjava2Version = '2.0.6'
     rx2AndroidNetworking = '1.0.0'
@@ -57,4 +59,5 @@ ext {
     junitVersion = '4.12'
     espressoVersion = '2.2.2'
     mockitoVersion = '2.7.22'
+    robolectricVersion ='3.3.2'
 }
