--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -41,8 +41,12 @@ android {
         applicationId "com.uele.reidx.android"
         minSdkVersion 21
         targetSdkVersion 25
+        multiDexEnabled true
         versionCode 1
         versionName "1.0.0"
+        vectorDrawables.useSupportLibrary = true
+
+        /* replaced with custom MockTestRunner */
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
@@ -102,6 +106,7 @@ configurations.all {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+
     // android support libraries
     compile "com.android.support:animated-vector-drawable:$rootProject.supportLibraryVersion"
     compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
@@ -113,54 +118,71 @@ dependencies {
     compile "com.android.support:support-core-utils:$rootProject.supportLibraryVersion"
     compile "com.android.support:support-vector-drawable:$rootProject.supportLibraryVersion"
 
-    // code generator for view
+    // Code Generator for view
     compile "com.jakewharton:butterknife:$rootProject.butterKnifeVersion"
     annotationProcessor "com.jakewharton:butterknife-compiler:$rootProject.butterKnifeVersion"
 
-    // crash reporting
+    // Crash Reporting
     compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true;
     }
-    // database
+
+    // Database
     compile "org.greenrobot:greendao:$rootProject.greenDaoVersion"
 
-    // dependency injection
+    // Debug Database
+    debugCompile "com.amitshekhar.android:debug-db:$rootProject.debugDBVersion"
+
+    // Dependency Injection
     compile "com.google.dagger:dagger:$rootProject.dagger2Version"
     annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.dagger2Version"
     provided 'javax.annotation:jsr250-api:1.0'
     compile 'javax.inject:javax.inject:1'
 
-    // font
-    compile "uk.co.chrisjenx:calligraphy:$rootProject.calligraphyVersion"
-
-    // parser
-    compile "com.google.code.gson:gson:$rootProject.gsonVersion"
-
     // Events
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.squareup:otto:1.3.8'
 
-    // debug database
-    debugCompile "com.amitshekhar.android:debug-db:$rootProject.debugDBVersion"
+    // Facebook
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 
-    // image
+    // Firebase
+    compile "com.google.firebase:firebase-auth:$rootProject.fireBaseVersion"
+    compile "com.google.firebase:firebase-core:$rootProject.fireBaseVersion"
+    compile "com.google.firebase:firebase-database:$rootProject.fireBaseVersion"
+
+    // Font
+    compile "uk.co.chrisjenx:calligraphy:$rootProject.calligraphyVersion"
+
+    // Image
     compile "com.github.bumptech.glide:glide:$rootProject.glideVersion"
 
-    // network
+    // Network
     compile "com.amitshekhar.android:rx2-android-networking:$rootProject.rx2AndroidNetworking"
+    compile "com.google.code.gson:gson:$rootProject.gsonVersion"
 
-    // logger
+    // Logger
     compile "com.jakewharton.timber:timber:$rootProject.timberVersion"
 
-    // reactive
+    // Reactive
     compile "io.reactivex.rxjava2:rxjava:$rootProject.rxjava2Version"
     compile "io.reactivex.rxjava2:rxandroid:$rootProject.rxandroidVersion"
-    compile 'com.jakewharton.byteunits:byteunits:0.9.1'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'net.danlew:android.joda:2.9.9'
 
-    // dependencies for local unit tests
+    // REST Interactions
+    compile "com.squareup.retrofit2:retrofit:$rootProject.retroFitVersion"
+    compile "com.squareup.retrofit2:converter-gson:$rootProject.retroFitVersion"
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+    compile 'com.jakewharton.byteunits:byteunits:0.9.0'
+    compile 'net.danlew:android.joda:2.7.1'
+    compile 'org.jetbrains:annotations:13.0'
+
+    // Dependencies for local unit tests
     testCompile "junit:junit:$rootProject.ext.junitVersion"
+    testCompile 'com.google.truth:truth:0.27'
+    testCompile "org.robolectric:robolectric:$rootProject.robolectricVersion"
     testCompile "org.mockito:mockito-core:$rootProject.mockitoVersion"
     testAnnotationProcessor "com.google.dagger:dagger-compiler:$rootProject.dagger2Version"
 
@@ -185,5 +207,5 @@ greendao {
 repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
-
+apply plugin: 'com.google.gms.google-services'
 apply from: 'qa-check.gradle'
