--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -144,7 +144,7 @@ dependencies {
     compile 'com.squareup:otto:1.3.8'
 
     // Facebook
-    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.facebook.android:facebook-android-sdk:4.23.+'
 
     // Firebase
     compile "com.google.firebase:firebase-auth:$rootProject.fireBaseVersion"
