--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -167,7 +167,7 @@ dependencies {
     // Font
     compile "uk.co.chrisjenx:calligraphy:$rootProject.calligraphyVersion"
 
-    // Image
+    // ImageEx
     compile "com.github.bumptech.glide:glide:$rootProject.glideVersion"
 
     // Network
